# tabpro

./: .gitignore  README.md  pyproject.toml
table_converter/: cli.py
table_converter/commands/: convert_tables.py
table_converter/core/: actions.py  config.py  constants.py  convert.py  types.py
table_converter/core/functions/: assign_id.py  get_nested_field_value.py  search_column_value.py  set_nested_field_value.py
table_processor/core/: actions.py  merge.py
table_processor/core/functions/: assign_id.py
tabpro/: __init__.py
tabpro/core/: actions.py  aggregate.py  convert.py  merge.py  progress.py
tabpro/core/actions/: __init__.py  assign_id.py  do_action.py  setup_actions.py
tabpro/core/classes/: row.py
tabpro/core/console/: views.py
tabpro/core/io/: loader.py  writer.py
tabpro/core/io/extensions/: io_csv.py  io_excel.py  io_json.py  io_jsonl.py  manage_writers.py
tests/: test_row.py
