[tool.poetry]
name = "table-converter"
version = "0.1.0"
description = "A table data converter"
authors = ["Akiva Miura <akiva.miura@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
